Changes in GetSimulationOverviewHandler due to the new Platform class.